# Depth-Guided-Inpainting

./: README.md
catkin_ws/devel/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/devel/lib/loam_velodyne/: laserMapping  laserOdometry  loamMapper  mapStitcher  multiScanRegistration  pointcloudProcessing  rosbagParser  transformMaintenance  videoInpainting  videoInpaintingTexSynth  videoInpaintingTexSynthFusion
catkin_ws/devel/lib/pkgconfig/: catkin_simple.pc  loam_velodyne.pc
catkin_ws/devel/share/catkin_simple/cmake/: catkin_simple-extras.cmake  catkin_simpleConfig.cmake
catkin_ws/devel/share/loam_velodyne/cmake/: loam_velodyneConfig.cmake
catkin_ws/src/loam_velodyne/: .cproject  .project  CMakeLists.txt
catkin_ws/src/loam_velodyne/bp-vision/: filter.h  image.h  noise.cpp  penguin.pgm  penguin_output  pnmfile.h  readme.ps  restore.cpp  road.pgm  road_output.pgm  stereo.cpp  tsukuba1.pgm  tsukuba2.pgm  tsukuba_output
catkin_ws/src/loam_velodyne/include/loam_velodyne/: BasicLaserMapping.h  BasicLaserOdometry.h  LaserMapping.h  LaserMappingRosFree.h  LaserOdometry.h  LaserOdometryRosFree.h  MultiScanRegistration.h  MultiScanRegistrationRosFree.h  common.h
catkin_ws/src/loam_velodyne/launch/: loam_velodyne.launch
catkin_ws/src/loam_velodyne/src/: LoamMapper.cpp  LoamMapper2.cpp  MapStitcher.cpp  PointCloudProcessing.cpp  RosbagParser.cpp  VideoInpainting.cpp  VideoInpaintingTexSynth.cpp  VideoInpaintingTexSynthFusion.cpp  VideoInpaintingTexSynthFusion2.cpp  laser_mapping_node.cpp  laser_odometry_node.cpp  utils.hpp
catkin_ws/src/loam_velodyne/src/lib/: BasicLaserMapping.cpp  BasicLaserOdometry.cpp  LaserMappingRosFree.cpp  LaserOdometry.cpp  LaserOdometryRosFree.cpp  MultiScanRegistration.cpp  MultiScanRegistrationRosFree.cpp
